# RayTracing

./: CMakeLists.txt  README.md  build.sh  build_and_run.sh
lib/: aabb.h  bvh.h  camera.h  draw.h  hittable.h  hittable_list.h  material.h  moving_sphere.h  perlin.h  ray.h  rtweekend.h  sphere.h  texture.h  vec3.h  xyz_rect.h
src/: ray_tracing.cpp
